Reset last known cursor on mouse leave

Reset last known cursor in RenderWidgetInputHandler
upon receiving a mouse leave event so the very next
set cursor command in this widget always sets the
cursor.

This change originally failed
CursorUpdateReceivedFromCrossSiteIframe
test and fixes were added to EventHandler to stop
sending set cursor message when mouse is on a
remote embedded iframe by the embedder.

Bug: 899525
Change-Id: I0a7114bccc7c3087b4993a212e5d5a8c1b39a03b
Reviewed-on: https://chromium-review.googlesource.com/c/1365085
Commit-Queue: Navid Zolghadr <nzolghadr@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Charlie Reis <creis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615964}