content/renderer/input/render_widget_input_handler.h
@@ -10,6 +10,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/macros.h"
 #include "base/time/time.h"
+#include "content/common/cursors/webcursor.h"
 #include "content/common/input/input_event_ack.h"
 #include "content/common/input/input_event_dispatch_type.h"
 #include "content/renderer/input/main_thread_event_queue.h"
@@ -75,6 +76,10 @@ class CONTENT_EXPORT RenderWidgetInputHandler {
   // to the browser.
   bool ProcessTouchAction(cc::TouchAction touch_action);
 
+  // Process the new cursor and returns true if it has changed from the last
+  // cursor.
+  bool DidChangeCursor(const WebCursor& cursor);
+
  private:
   blink::WebInputEventResult HandleTouchEvent(
       const blink::WebCoalescedInputEvent& coalesced_event);
@@ -85,6 +90,10 @@ class CONTENT_EXPORT RenderWidgetInputHandler {
 
   // Are we currently handling an input event?
   bool handling_input_event_;
+
+  // We store the current cursor object so we can avoid spamming SetCursor
+  // messages.
+  base::Optional<WebCursor> current_cursor_;
 
   // Used to intercept overscroll notifications while an event is being
   // handled. If the event causes overscroll, the overscroll metadata can be
