content/browser/site_per_process_hit_test_browsertest.cc
@@ -3311,7 +3311,7 @@ void CursorUpdateReceivedFromCrossSiteIframeHelper(
 
 }  // namespace
 
-#if defined(OS_WIN)
+#if defined(USE_AURA)
 // https://crbug.com/882458
 #define MAYBE_CursorUpdateReceivedFromCrossSiteIframe \
   DISABLED_CursorUpdateReceivedFromCrossSiteIframe
